Fix header title on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -362,7 +362,7 @@ footer h2 {
     }
 
     header h1 {
-        font-size: 96px;
+        font-size: 80px;
     }
 
     header h2, h3 {
